apps/base/matrix/synapse/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: synapse-buffering
  namespace: app-matrix
spec:
  buffering:
    maxRequestBodyBytes: 52428800
    memRequestBodyBytes: 1048576
